--- a/js/colorGame/style.css
+++ b/js/colorGame/style.css
@@ -8,6 +8,7 @@ header{
 	text-align: center;
 	background: grey;
 	border-bottom: 1px solid rgba(0, 0, 0, .5);
+	margin-bottom: 5rem;
 }
 
 .container{
@@ -19,13 +20,14 @@ header{
 }
 
 .card{
-	background: red;
+	background-color: red;
 	border-radius: 10px;
 	width: 30%;
 	padding-bottom: 30%;
-	margin: 2rem 0;
+	margin-bottom: 2rem;
+	transition: .2s ease-in-out;
 }
 
 .card:hover{
-	background: #bada55;
+	transform: scale(1.1);
 }
