Added public static folders, partial views, include header/footer

--- a/node/firstExpressApp/views/example.ejs
+++ b/node/firstExpressApp/views/example.ejs
@@ -1,2 +1,6 @@
+<% include partials/header %>
+
 <h1>I am the Header for this page</h1>
 <h3>You have visited the <%= thing.toLowerCase() %> page</h3>
+
+<% include partials/footer %>
