--- a/node/firstExpressApp/views/posts.ejs
+++ b/node/firstExpressApp/views/posts.ejs
@@ -1,9 +1,11 @@
+<% include partials/header %>
+
 <h1>The Posts Page</h1>
-
-
 
 <% for(var i = 0; i < posts.length; i++){ %>
 	<h3><%= posts[i].title %></h3>
 	<h5>Written by: <%= posts[i].author %></h5>
 	<br>
 <% } %>
+
+<% include partials/footer %>
