--- a/node/firstExpressApp/views/home.ejs
+++ b/node/firstExpressApp/views/home.ejs
@@ -4,5 +4,12 @@
 <h3>By MWhite</h3>
 
 <p>Welcome</p>
+<p>Visit any of the below urls:</p>
+<ul>
+	<li>/ : Root Directory</li>
+	<li>/*Anything* : A test case for url variables</li>
+	<li>/posts : Array iteration in EJS</li>
+	<li>/friends : Using POST requests to edit a list</li>
+</ul>
 
 <% include partials/footer %>
