Refactored movies to include a query filed from the homepage form

--- a/node/movieSearchApp/views/home.ejs
+++ b/node/movieSearchApp/views/home.ejs
@@ -1,3 +1,9 @@
 <% include partials/header.ejs %>
 <h1>The home page</h1>
+
+<p>Search for a movie:</p>
+<form action="/movies" method="GET">
+	<input type="text" name="search" id="search">
+	<input type="submit">
+</form>
 <% include partials/footer.ejs %>
