Added catch-all route and 404 error page

--- a/YelpCamp/public/style.css
+++ b/YelpCamp/public/style.css
@@ -24,3 +24,13 @@ footer{
 	background-color: #555;
 	color: #fff;
 }
+
+/* ========================================
+			404 Page
+======================================== */
+
+#404_error{
+	text-align: center;
+	font-size: 2rem;
+	color: blue;
+}
