--- a/YelpCamp/views/404.ejs
+++ b/YelpCamp/views/404.ejs
@@ -1,5 +1,5 @@
 <% include partials/header %>
-	<div id="404_error">
+	<div id="error_404">
 		<h3>I dont know how you got here, but theres nothing to see.</h3>
 		<h3>GO BACK FROM WHERST YE CAME</h3>
 		<h1>404</h1>
