Added campgrounds GET page, included base.css, updated header

--- a/YelpCamp/views/home.ejs
+++ b/YelpCamp/views/home.ejs
@@ -1,5 +1,9 @@
 <% include partials/header %>
 
-	<h3>Home Page</h3>
+	<h1>Home Page</h1>
+
+	<ul>
+		<li><a href="/campgrounds">View all campgrounds</a></li>	
+	</ul>
 
 <% include partials/footer %>
