--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -5,12 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>YelpCamp</title>
+	<link rel="stylesheet" href="BaseStructure.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
 		<div id="header_text">
-			<h1>YelpCamp</h1>
+			<h1><a href="/">YelpCamp</a></h1>
 			<h3>The Camp for all your Yelping</h3>
 		</div>
 	</header>	
