--- a/YelpCamp/public/style.css
+++ b/YelpCamp/public/style.css
@@ -5,11 +5,17 @@ body{
 }
 
 header{
-	padding: 5rem;
+	padding: 2rem;
 	background-color: #bada55;
 	color: red;
 	border-bottom: 2px solid rgba(0, 0, 0, .2);
 	text-align: center;
+	font-size: 2rem;
+}
+
+header h1 a{
+	text-decoration: none;
+	color: red;
 }
 
 main{
@@ -23,6 +29,53 @@ footer{
 	text-align: center;
 	background-color: #555;
 	color: #fff;
+}
+
+/* ========================================
+			Campground
+======================================== */
+.campground_feed{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.campground{
+	display: inline-block;
+	position: relative;
+	max-width: 500px;
+	margin: 0.5rem;
+}
+
+.camp_title{
+	display: block;
+	position: absolute;
+	bottom: 0%;
+	width: 100%;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 2rem;
+	color: #ddd;
+	z-index: 2;
+	transition: .2s ease-in-out;
+}
+
+.camp_img{
+	position: relative;
+	width: 100%;
+	height: auto;
+	z-index: 1;
+	transition: .1s ease-in-out;
+}
+
+.campground:hover .camp_img{
+	filter: saturate(0);
+}
+
+.campground:hover .camp_title{
+	color: lightgreen;
 }
 
 /* ========================================
