Renamed templates (REST), updated Schema, added Show route

--- a/YelpCamp/views/index.ejs
+++ b/YelpCamp/views/index.ejs
@@ -5,8 +5,10 @@
 	<div class="campground_feed">
 		<% campgrounds.forEach((e)=>{ %>
 			<div class="campground">
-				<img src="<%= e.image %>" alt="campground image" class='camp_img'>
-				<p class="camp_title"><%= e.name %></p>
+				<a href="/campgrounds/<%= e._id %>">
+					<img src="<%= e.image %>" alt="campground image" class='camp_img'>
+					<p class="camp_title"><%= e.name %></p>
+				</a>	
 			</div>
 		<% }); %>
 	</div>
