--- a/YelpCamp/public/style.css
+++ b/YelpCamp/public/style.css
@@ -79,6 +79,41 @@ footer{
 }
 
 /* ========================================
+			Single Campground Page
+======================================== */
+
+.singlePage .header{
+	margin: .5rem 0;
+}
+
+.singlePage .title{
+	text-align: left;
+	display: inline-block;
+}
+
+.singlePage .likes{
+	display: inline-block;
+	float: right;
+	padding: .5rem;
+}
+
+.singlePage img{
+	width: 100%;
+	height: auto;
+	max-width: 750px;
+	border-radius: 20px;
+	margin: 1rem auto;
+}
+
+.singlePage .description_title{
+	font-weight: 900;
+}
+
+.singlePage .description{
+	border: 1px solid green;
+}
+
+/* ========================================
 			404 Page
 ======================================== */
 
