--- a/YelpCamp/views/new.ejs
+++ b/YelpCamp/views/new.ejs
@@ -5,6 +5,7 @@
 	<form action="/campgrounds" method="POST">
 		<input type="text" name="name" id="name" placeholder="Campground Name">
 		<input type="text" name="imgURL" id="imgURL" placeholder="Image URL">
+		<textarea name="description" id="description" cols="30" rows="10"></textarea>
 		<input type="submit">
 	</form>
 
