--- a/node/RESTfulBlog/public/stylesheets/style.css
+++ b/node/RESTfulBlog/public/stylesheets/style.css
@@ -1,3 +1,33 @@
+nav{
+	height: 3rem;
+	padding: .5rem;
+	background-color: #555;
+}
+
+nav ul{
+	display: inline-flex;
+	flex-direction: row;
+	float: right;
+}
+
+nav ul li{
+	list-style: none;
+}
+
+nav ul li a{
+	margin: 0 .5rem;
+	padding: .5rem 1rem;
+	text-decoration: none;
+	color: #fff;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+nav ul li a:hover{
+	background-color: #888;
+	color: green;
+}
+
 header, footer{
 	padding: 1rem 5rem;
 	text-align: center;
