--- a/node/RESTfulBlog/views/partials/header.ejs
+++ b/node/RESTfulBlog/views/partials/header.ejs
@@ -5,10 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>RESTful Blog</title>
-	<link rel="stylesheet" href="/BaseStructure.css">
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
+	<nav class="ui fixed inverted menu">
+		<div class="ui container">
+			<div class="header item">
+				<i class="code icon"></i>
+				Blog Site
+			</div>
+			<a href="/" class="item">Home</a>
+			<a href="/blogs" class="item">Blog</a>
+			<a href="/blogs/new" class="item">New Blog</a>
+		</div>
+	</nav>
 	<header>
 		<h1>RESTful Blog</h1>
 	</header>
