--- a/node/RESTfulBlog/public/stylesheets/style.css
+++ b/node/RESTfulBlog/public/stylesheets/style.css
@@ -1,73 +1,4 @@
-nav{
-	height: 3rem;
-	padding: .5rem;
-	background-color: #555;
-}
-
-nav ul{
-	display: inline-flex;
-	flex-direction: row;
-	float: right;
-}
-
-nav ul li{
-	list-style: none;
-}
-
-nav ul li a{
-	margin: 0 .5rem;
-	padding: .5rem 1rem;
-	text-decoration: none;
-	color: #fff;
-	font-weight: 700;
-	text-transform: uppercase;
-}
-
-nav ul li a:hover{
-	background-color: #888;
-	color: green;
-}
-
-header, footer{
-	padding: 1rem 5rem;
-	text-align: center;
-	background-color: #ccc;
-}
-
-main{
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 1rem;
-}
-
-img{
-	max-width: 400px;
-	height: auto;
-}
-
-.blogPost{
-	display: flex;
-	flex-direction: row;
-	margin: .5rem auto;
-	background-color: #eee;
-	border-radius: 10px;
-	overflow: hidden;
-}
-
-.blogPost_text{
-	flex: 1 0 250px;
-	padding: .5rem;
-}
-
-.created{
-	font-weight: 300;
-	font-size: .75rem;
-	margin: .2rem 0;
-	color: #aaa;
-}
-
-.blogPost_image{
-	width: 250px;
-	height: 250px;
-	border-radius: 10px;
+i.icon{
+	font-size: 2rem;
+	margin-right: 1rem !important;
 }
