--- a/node/RESTfulBlog/views/partials/header.ejs
+++ b/node/RESTfulBlog/views/partials/header.ejs
@@ -20,7 +20,7 @@
 			<a href="/blogs/new" class="item">New Blog</a>
 		</div>
 	</nav>
-	<header>
+	<header class="ui huge header">
 		<h1>RESTful Blog</h1>
 	</header>
-	<main>
+	<main class="ui main text container segment">
