Updated single blog page style

--- a/node/RESTfulBlog/views/single.ejs
+++ b/node/RESTfulBlog/views/single.ejs
@@ -2,13 +2,17 @@
 
 <h1>Single Blog Post</h1>
 
-<div class="blogPost">
-	<div class="blogPost_text">
-		<h2><%= blog.title %></h2>
-		<p class="created"><%= blog.created %></p>
-		<p><%= blog.body %></p>
+<div class="ui huge header"><%= blog.title %></div>
+<div class="ui top attached">
+	<div class="item">
+		<img src="<%= blog.image %>" alt="Image" class="ui centered rounded image">
+		<div class="content">
+			<span class="created"><%= blog.created.toDateString(); %></span>
+			<div class="description">
+				<p><%- blog.body %></p>
+			</div>
+		</div>
 	</div>
-	<img src="<%= blog.image %>" alt="Blog Image" class="blogPost_image">
 </div>
 
 <% include partials/footer.ejs %>
