--- a/node/RESTfulBlog/views/partials/header.ejs
+++ b/node/RESTfulBlog/views/partials/header.ejs
@@ -12,7 +12,7 @@
 	<nav class="ui fixed inverted menu">
 		<div class="ui container">
 			<div class="header item">
-				<i class="code icon"></i>
+				<i class=" big code icon"></i>
 				Blog Site
 			</div>
 			<a href="/" class="item">Home</a>
