--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -5,10 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>YelpCamp</title>
-	<link rel="stylesheet" href="/BaseStructure.css">
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="/BaseStructure.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
+	<nav>
+		<ul>
+			<li id="CoTitle">YelpCamp</li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/campgrounds">View All Campgrounds</a></li>
+		</ul>
+	</nav>
 	<header>
 		<div id="header_text">
 			<h1><a href="/">YelpCamp</a></h1>
