--- a/YelpCamp/views/show.ejs
+++ b/YelpCamp/views/show.ejs
@@ -15,7 +15,7 @@
 	</div>
 
 	<div>
-		<a href="/campgrounds">Back to all Campgrounds</a>
+		<a href="/campgrounds" class="button">Back to all Campgrounds</a>
 	</div>
 
 <% include partials/footer %>
