--- a/YelpCamp/public/style.css
+++ b/YelpCamp/public/style.css
@@ -4,6 +4,20 @@ body{
 	color: #222;
 }
 
+nav ul{
+	display: flex;
+	flex-direction: row;
+	list-style: none;
+	align-items: center;
+}
+
+nav ul li a, 
+#CoTitle{
+	padding: .5rem 1rem;
+	font-size: 2rem;
+	text-decoration: none;
+}
+
 header{
 	padding: 2rem;
 	background-color: #bada55;
@@ -31,6 +45,19 @@ footer{
 	color: #fff;
 }
 
+.button{
+	padding: .5rem 1rem;
+	color: blue;
+	border: 1px solid blue;
+	border-radius: 5px;
+	font-size: 1.5rem;
+}
+
+.button:hover{
+	background-color: blue;
+	color: white;
+}
+
 /* ========================================
 			Campground
 ======================================== */
@@ -39,43 +66,41 @@ footer{
 	flex-flow: row wrap;
 	justify-content: space-around;
 	align-items: center;
+	margin: 1rem 0;
 }
 
-.campground{
-	display: inline-block;
-	position: relative;
-	max-width: 500px;
-	margin: 0.5rem;
-}
-
-.camp_title{
+.campground_card{
 	display: block;
-	position: absolute;
-	bottom: 0%;
-	width: 100%;
-	text-align: center;
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 2rem;
-	color: #ddd;
-	z-index: 2;
-	transition: .2s ease-in-out;
+	position: relative;
+	flex-basis: 250px;
+	margin: 0.5rem;
+	border: 1px solid grey;
+	border-radius: 25px;
+	overflow: hidden;
+	height: 250px;
+	text-decoration: none;
 }
 
 .camp_img{
 	position: relative;
 	width: 100%;
-	height: auto;
-	z-index: 1;
+	height: 70%;
 	transition: .1s ease-in-out;
 }
 
-.campground:hover .camp_img{
-	filter: saturate(0);
+.camp_title{
+	text-align: center;
+	font-weight: 700;
+	font-size: 2rem;
+	transition: .1s ease-in-out;
 }
 
-.campground:hover .camp_title{
-	color: lightgreen;
+.campground_card:hover .camp_img{
+	transform: scale(1.1);
+}
+
+.campground_card:hover .camp_title{
+	color: green;
 }
 
 /* ========================================
@@ -92,7 +117,6 @@ footer{
 }
 
 .singlePage .likes{
-	display: inline-block;
 	float: right;
 	padding: .5rem;
 }
