Added 'npm run seed' script to seed the database with clean data

--- a/YelpCamp/views/index.ejs
+++ b/YelpCamp/views/index.ejs
@@ -7,7 +7,7 @@
 			<a href="/campgrounds/<%= e._id %>" class="campground_card">
 				<img src="<%= e.image %>" alt="campground image" class='camp_img'>
 				<div class="camp_content">
-					<p class="camp_title"><%= e.name %></p>
+					<p class="camp_title uppercase"><%= e.name %></p>
 				</div>
 			</a>	
 		<% }); %>
