Finished authApp with login middleware and logout functionality

--- a/node/authApp/views/secret.ejs
+++ b/node/authApp/views/secret.ejs
@@ -9,5 +9,10 @@
 <body>
     <h1>Secret Page</h1>
     <h3>HOW DID YOU GET HERE</h3>
+    <p>No Kates allowed!!!</p>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/logout">Logout</a></li>
+    </ul>
 </body>
 </html>
