--- a/node/authApp/views/index.ejs
+++ b/node/authApp/views/index.ejs
@@ -9,6 +9,11 @@
 <body>
     <h1>Hello World</h1>
     <h3>Auth App v1</h3>
+    <ul>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/register">Signup</a></li>
+        <li><a href="/logout">Logout</a></li>
+    </ul>
     
 </body>
 </html>
