Refactored routes. Seperated views into sub folders.

--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 	<h1>Campgrounds Page</h1>
 
@@ -15,4 +15,4 @@
 
 	<a href="/campgrounds/new" class="button">Add a new campground!</a>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
