--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 	<h1>Create a new campground</h1>
 
@@ -9,4 +9,4 @@
 		<input type="submit">
 	</form>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
