Refactor 'add new campground'. Updated Campground Schema.

--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -10,13 +10,16 @@
 			</div>
 		</div>
 		<img src="<%= campground.image %>" alt="Campground Image">
+		<p class="created_by">Created by <%=campground.author.username%></p>
+		<p class="created_by">Created on <%=campground.created%></p>
 		<p class="description_title">Description:</p>
 		<p class="description"><%= campground.description %></p>
 		<% 
 			campground.comments.forEach((comment)=>{
 		%>
 			<p class="comment">
-				<%= comment.text %> - BY: <%= comment.author %>-
+				<strong><%= comment.author.username %> : </strong>
+				<%= comment.text %>
 			</p>
 		<% 
 			})
